# Sapphire

./: .gitignore  CLAUDE.md  HANDOFF.md  MORNING-REPORT.md  README.md  REPORT.md  integration_map.md  orchestration_brief_hayes.md
.githooks/: commit-msg  (+2 more)
q-models/: .gitignore  CLAUDE.md  HANDOFF.md  NEXT_STEPS.md  README.md  SETUP_NEW_DEVICE.md  VENDORED.md  pyproject.toml  requirements-finetune.txt  requirements.txt
q-models/Presentations/: boltz_3slide_2026-06-12.pptx
q-models/RohanOnly/: README.md  boltz_overnight_briefing_2026-06-18.md  boltz_partner_target_hits_2026-06-18.md  boltz_work_summary_2026-06-18.md  james_briefing_2026-06-16.md  model_options_briefing.md  track_presentation_brief_2026-06-18.md
q-models/aws/: README.md  RETRIEVE.md  adambind_eval.py  adambind_userdata.sh  admet_char_userdata.sh  aev_plig_eval.py  aev_plig_userdata.sh  ankh_sweep.py  atomica_dock_nav18_eval.py  atomica_dock_nav18_userdata.sh  atomica_nav18_eval.py  atomica_nav18_userdata.sh  autorun.sh  balm_characterization.py  balm_characterization_userdata.sh  balm_crossmodal_eval.py  balm_crossmodal_userdata.sh  big_panel_sweep.py  big_panel_userdata.sh  boltz_cns_eval.py  boltz_cns_userdata.sh  boltz_pathway_userdata.sh  boltz_pkm2_ppard_userdata.sh  boltz_round2_panel.json  boltz_round2_userdata.sh  boltz_runner.py  boltz_validation_panel.json  boltz_validation_userdata.sh  build_pgk2_dataset.py  cardiogenai_eval.py  cardiogenai_userdata.sh  chemeleon_maplight_eval.py  chemeleon_maplight_userdata.sh  cns_dti_benchmark_eval.py  cns_dti_benchmark_userdata.sh  cns_new_models_eval.py  (+54 more)
(+1767 files in other folders)
